--- a/detonator/default/Makefile
+++ b/detonator/default/Makefile
@@ -15,7 +15,7 @@ COMMON = -mmcu=$(MCU)
 
 ## Compile options common for all C compilation units.
 CFLAGS = $(COMMON)
-CFLAGS += -Wall -gdwarf-2 -std=gnu99     -DF_CPU=1000000UL -Os -funsigned-char -funsigned-bitfields -fpack-struct -fshort-enums
+CFLAGS += -Wall -gdwarf-2 -std=gnu99       -DF_CPU=1000000UL -Os -funsigned-char -funsigned-bitfields
 CFLAGS += -MD -MP -MT $(*F).o -MF dep/$(@F).d 
 
 ## Assembly specific flags
@@ -37,7 +37,7 @@ HEX_EEPROM_FLAGS += --change-section-lma .eeprom=0 --no-change-warnings
 
 
 ## Objects that must be built in order to link
-OBJECTS = main.o timer.o sevenseg.o buttons.o led.o 
+OBJECTS = main.o timer.o sevenseg.o buttons.o led.o rf73_spi.o 
 
 ## Objects explicitly added by the user
 LINKONLYOBJECTS = 
@@ -59,6 +59,9 @@ buttons.o: ../buttons.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 led.o: ../led.c
+	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
+
+rf73_spi.o: ../rf73_spi.c
 	$(CC) $(INCLUDES) $(CFLAGS) -c  $<
 
 ##Link
